style(hero): fix white space
Removed white spaces from main__hero-block.
This will allow better rendering of the hero image on mobile display.

--- a/style.css
+++ b/style.css
@@ -101,13 +101,13 @@ vertical-align: top;
   display: flex;
   flex-direction: column-reverse; 
   align-items:center;
-  margin-top: 15rem; 
-  padding-bottom:2rem; 
+  margin-top: 13rem;  
+  padding:0 4% 2rem;
 }
 
 .hero__info-block {
   min-height: 20rem;
-  width: 85%;
+  width: 100%;
   display: flex;
   flex-direction: column; 
   justify-content: center;
@@ -120,7 +120,7 @@ vertical-align: top;
 }
 
 .hero__info-heading {
-  font-size: 4rem;
+  font-size: 3.2rem;
   font-weight: 600;
   line-height: 1.2;
   color: #040403;
@@ -163,11 +163,11 @@ vertical-align: top;
   min-height: 7rem;
   width: 100%;
   display: flex;
-  gap: 2rem;
+  gap: 2rem; 
 }
 
 .mail__input-field {
-  flex-basis: 20%;
+  flex-basis: 15%;
   display: flex;
   align-items: center;
 }
@@ -187,10 +187,10 @@ vertical-align: top;
 }
 
 .mail__button {
-  padding: 1.6rem 1.8rem;
+  padding: 1.6rem 1.1rem;
   border: none;
   border-radius: 0.3rem;
-  font-size: 1.6rem;
+  font-size: 1.4rem;
   font-weight: 500;
   background: #000000;
   color: #efefee;
